COrrection du wrap

--- a/base.css
+++ b/base.css
@@ -136,23 +136,26 @@ input::placeholder {
 }
 
 
-/* FOOTER FORM END /*
+/* FOOTER FORM END */
 
 /* LIENS DU FOOTER START */
 #footer_links {
+    box-sizing: border-box;
     background-color: rgba(0,0,0,0);
     display : flex;
     margin : auto;
     flex-flow: row wrap;
-    padding: 32px;
+    width: calc(100% - 48px);
+    max-width: 1272px;
 }
 
 .footer_div {
     display : flex;
     flex:1 0 100%;
-    flex-basis: 400px;
+    flex-basis: 408px;
     flex-direction : column;
     align-items: flex-start;
+    margin-bottom: 1rem;
 }
 
 .footer_div ul {
